--- a/signIn/signin.html
+++ b/signIn/signin.html
@@ -4,11 +4,11 @@
 
 <div class="hero">
   <div class="form-box">
-    <!-- <h2>Any Time Any Movie</h2> -->
+    
     <div class="button-box">
       <div id="btn"></div>
-      <button type="button" class="toggle-btn" onclick="login()"><big>ATAM</big></button>
-      <!-- <button type="button" class="toggle-btn" onclick="register()">Register</button> -->
+      <button type="button" class="toggle-btn" onclick="login()"><big>IMDB 2.0</big></button>
+    
     </div>
     <div class="social-icons">
       <img src="./../Images/fb.png">
