--- a/register/register.html
+++ b/register/register.html
@@ -6,8 +6,8 @@
     <div class="form-box">
       <div class="button-box">
         <div id="btn"></div>
-        <button type="button" class="toggle-btn">Register</button>
-        <!-- <button type="button" class="toggle-btn" onclick="register()">Register</button> -->
+        <button type="button" class="toggle-btn"><big>IMDB 2.0</big></button>
+        
       </div>
       <div class="social-icons">
         <img src="./../Images/fb.png">
